[gd_scene load_steps=12 format=3 uid="uid://cakr7n3bfc5aa"]

[ext_resource type="Script" path="res://gameplay/levels/runner_game.gd" id="1_ersb5"]
[ext_resource type="Script" path="res://scripts/Background.gd" id="1_gkgeb"]
[ext_resource type="Texture2D" uid="uid://bumto5coi17e3" path="res://assets/sprites/Background.png" id="2_gx8r1"]
[ext_resource type="FontFile" uid="uid://cfcnj4noqlc0k" path="res://assets/fonts/kenvector_future.ttf" id="5_3dajt"]
[ext_resource type="Texture2D" uid="uid://b6soyr6y3s06t" path="res://packs/PackCharacterPixelArt05/PlayerAllAnim/Player_01.png" id="6_eri13"]
[ext_resource type="Script" path="res://gameplay/monsters/Monster.gd" id="7_n867m"]
[ext_resource type="PackedScene" uid="uid://c6oaoqswfiap4" path="res://Obstacle.tscn" id="7_qsfhr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h0nu2"]
radius = 34.0147

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ucera"]
size = Vector2(1600, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0trxt"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sc203"]
bg_color = Color(0.133333, 0.658824, 0.454902, 1)

[node name="GameFlat" type="Node"]
script = ExtResource("1_ersb5")

[node name="Background" type="Node2D" parent="." groups=["DynamicObject"]]
modulate = Color(0.577008, 0.577008, 0.577008, 1)
position = Vector2(0, 480)
scale = Vector2(2, 2)
script = ExtResource("1_gkgeb")

[node name="Background" type="Sprite2D" parent="Background"]
position = Vector2(400, 0)
texture = ExtResource("2_gx8r1")

[node name="Background2" type="Sprite2D" parent="Background"]
position = Vector2(1200, 0)
texture = ExtResource("2_gx8r1")

[node name="Player" type="RigidBody2D" parent="." groups=["Player"]]
position = Vector2(180, 480)
mass = 2.2
gravity_scale = 1.6
continuous_cd = 1

[node name="Plane" type="Sprite2D" parent="Player"]
texture = ExtResource("6_eri13")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_h0nu2")

[node name="Wall" type="Node" parent="."]

[node name="TopWall" type="StaticBody2D" parent="Wall"]
position = Vector2(800, 68)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/TopWall"]
shape = SubResource("RectangleShape2D_ucera")

[node name="BottomWall" type="StaticBody2D" parent="Wall"]
position = Vector2(800, 960)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/BottomWall"]
shape = SubResource("RectangleShape2D_ucera")

[node name="UI" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HealthBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 68.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0trxt")
theme_override_styles/fill = SubResource("StyleBoxFlat_sc203")
value = 100.0
show_percentage = false

[node name="ScoreLabel" type="Label" parent="UI/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_3dajt")
theme_override_font_sizes/font_size = 60
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpawnerTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="Monster" parent="." instance=ExtResource("7_qsfhr")]
script = ExtResource("7_n867m")

[connection signal="timeout" from="SpawnerTimer" to="." method="_on_spawner_timer_timeout"]
